--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
-		"expo": "~49.0.11",
-		"expo-status-bar": "~1.6.0",
-		"react": "18.2.0",
-		"react-native": "0.72.4",
 		"@gorhom/bottom-sheet": "^4.4.7",
 		"@react-native-async-storage/async-storage": "1.18.2",
 		"@react-navigation/bottom-tabs": "^6.5.8",
@@ -20,11 +16,16 @@
 		"@react-navigation/native": "^6.1.7",
 		"@react-navigation/native-stack": "^6.9.13",
 		"@types/react": "^18.2.18",
+		"expo": "~49.0.11",
 		"expo-linear-gradient": "~12.3.0",
 		"expo-splash-screen": "^0.20.5",
+		"expo-status-bar": "~1.6.0",
+		"react": "18.2.0",
+		"react-native": "0.72.4",
 		"react-native-dotenv": "^3.4.9",
 		"react-native-gesture-handler": "~2.12.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.5",
+		"react-native-mask-input": "^1.2.3",
 		"react-native-pager-view": "6.2.0",
 		"react-native-reanimated": "~3.3.0",
 		"react-native-root-siblings": "^4.1.1",
