--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-native-gesture-handler": "~2.12.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.5",
 		"react-native-mask-input": "^1.2.3",
+		"react-native-otp-textinput": "^1.1.3",
 		"react-native-pager-view": "6.2.0",
 		"react-native-reanimated": "~3.3.0",
 		"react-native-root-siblings": "^4.1.1",
